# qrshare.io-cli

./: .gitignore  README.md  pyproject.toml
cli/: ascii_table.py  cli.py  client.py  colors.py
